--- a/assets/styles/flickity.css
+++ b/assets/styles/flickity.css
@@ -1,7 +1,7 @@
 .carousel {
     background-color: #f6cccd; /* Cor de fundo */
     max-width: 800px;
-    margin: 0 auto; /* Centraliza o carrossel na página */
+    margin: 0 auto;
 }
 
 .carousel-cell {
@@ -9,14 +9,14 @@
     height: 700px; /* Altura do slide */
     margin-right: 10px; /* Espaçamento entre slides */
     overflow: hidden;
-    border-radius: 10px; /* Cantos arredondados */
+    border-radius: 10px;
     position: relative;
 }
 
 .carousel-cell img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ajusta a imagem para cobrir toda a célula sem distorção */
+    object-fit: cover;
 }
 
 .flickity-viewport {
