--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,101 +1,179 @@
-:root {
-    --rosa-claro: #F6CCCD;
-    --roxo-vibrante: #9955BA;
-}
-
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    margin: 0;
+    overflow-x: hidden;
+    padding: 0;
 }
 
-body, input, button {
+html {
+    overflow-x: hidden;
+}
+
+body, button, input {
     font-family: 'Roboto', sans-serif;
     font-weight: normal;
 }
 
 body {
-    position: relative;
     height: 100vh;
     margin: 0;
+    position: relative;
 }
 
 body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     background-image: url('/assets/img/noivos_ilustracao.png');
-    background-position:  calc(100% + 50%) calc(100% + 50%);;
+    background-position: calc(100% + 50%) calc(100% + 50%);
     background-repeat: no-repeat;
     background-size: 90%;
+    content: "";
+    left: 0;
     opacity: 0.1;
+    position: absolute;
+    right: 0;
+    top: 0;
     z-index: -1;
 }
 
 #home, #noivos, #casamento, #rspv {
-    height: calc(100vh - 60px);
-    width: 100vw;
-
+    width: 100%;
+    min-height: calc(100vh - 60px);
 }
 
-.sectionTitle {
-    font-size: 2em;
-    text-align: center;
-    font-family: "Press Start 2P", system-ui;
-    margin-top: 2em;
-    margin-bottom: 2em;
-}
 
-/* Estilização da Seção Principal */
-#home {
-    height: 100vh;
-    padding: 0 20px;
-    background-color: #f6cccd;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.noivosTitle {
-    font-size: 36px;
-    color: #c54b50;
-    margin-bottom: 40px;
-    font-family: 'Press Start 2P', sans-serif;
-    padding-top:60px;
+.noivosTitle, .sectionTitle, .sectionTitleClear {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
 
 .photo-frame {
-    max-width: 500px;
-    margin: 0 auto 40px;
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+    margin: 0 auto 40px;
+    max-width: 500px;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
 .photo-frame:hover {
-    transform: scale(1.05);
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.15);
+    transform: scale(1.05);
+}
+
+/* Header */
+header {
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+.menuLogoWrapper {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 0 20px;
+}
+
+.menuLogoWrapper img {
+    height: 50px;
+}
+
+.menuWrapper ul {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menuWrapper ul li {
+    display: inline-block;
+}
+
+.menuWrapper ul li a {
+    border-radius: 5px;
+    color: #555555;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    padding: 10px 15px;
+    text-decoration: none;
+    transition: color 0.3s ease, background-color 0.3s ease;
+}
+
+.menuWrapper ul li a:hover {
+    background-color: #c54b50;
+    color: #ffffff;
+}
+
+.menuWrapper ul li a:active {
+    background-color: #a33a3f;
+}
+
+/* Responsividade do Header */
+@media (max-width: 768px) {
+    header {
+        width: 100vw;
+    }
+
+    .menuLogoWrapper {
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .menuLogoWrapper img {
+        margin-bottom: 15px;
+    }
+
+    .menuWrapper ul {
+        align-items: flex-start;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .menuWrapper ul li a {
+        display: block;
+        width: 100%;
+    }
+}
+
+
+/* Página Inicial / Countdown */
+#home {
+    align-items: center;
+    background: linear-gradient(180deg, #F9D9DA 0%, #F6CCCD 100%);
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    padding: 0 20px;
+    text-align: center;
+}
+
+.noivosTitle {
+    color: #c54b50;
+    font-family: 'Press Start 2P', sans-serif;
+    font-size: 48px;
+    margin-bottom: 40px;
+    padding-top: 60px;
 }
 
 .countdown {
     background-color: #ffffff;
-    padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 700px;
     margin: 0 auto;
+    max-width: 700px;
+    padding: 30px;
 }
 
 .countdown h1 {
-    font-size: 28px;
     color: #c54b50;
-    margin-bottom: 30px;
     font-family: 'Poppins', sans-serif;
+    font-size: 28px;
+    margin-bottom: 30px;
 }
 
 .countdown-container {
@@ -105,16 +183,22 @@ body::before {
 
 .countdown-clock {
     display: flex;
-    justify-content: space-around;
     gap: 20px;
+    justify-content: space-around;
 }
 
 .time-segment {
     background-color: #c54b50;
-    padding: 15px 20px;
     border-radius: 10px;
     color: #ffffff;
     font-family: 'Poppins', sans-serif;
+    padding: 15px 20px;
+}
+
+.time-label {
+    display: block;
+    font-size: 16px;
+    margin-top: 5px;
 }
 
 .time-number {
@@ -122,31 +206,351 @@ body::before {
     font-weight: bold;
 }
 
-.time-label {
-    font-size: 16px;
-    margin-top: 5px;
-    display: block;
-}
-
 #countdownMessage {
-    margin-top: 30px;
-    font-size: 22px;
     color: #555555;
     font-family: 'Poppins', sans-serif;
+    font-size: 22px;
+    margin-top: 30px;
 }
 
-/* Responsividade */
+/* Responsividade da Página Inicial */
 @media (max-width: 768px) {
     .countdown-container {
         flex-direction: column;
     }
 
-    .time-segment {
-        margin-bottom: 15px;
-    }
-
     .photo-frame {
         max-width: 90%;
     }
+
+    .time-segment {
+        margin-bottom: 15px;
+    }
 }
 
+/* Dados do Casamento */
+#casamento {
+    background: linear-gradient(180deg, #F9D9DA 0%, #F6CCCD 100%);
+    padding: 60px 20px;
+    text-align: center;
+}
+
+.sectionTitle {
+    color: #c54b50;
+    font-family: 'Poppins', sans-serif;
+    font-size: 2em;
+    margin-bottom: 40px;
+    margin-top: 2em;
+    text-align: center;
+}
+
+.casamentoWrapper {
+    align-items: stretch;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 1200px;
+    text-align: left;
+}
+
+.ceremonyInfo {
+    background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #555555;
+    font-family: 'Poppins', sans-serif;
+    padding: 30px;
+    width: 48%;
+}
+
+.ceremonyInfo h2, .ceremonyInfo h3 {
+    color: #c54b50;
+    margin-bottom: 20px;
+}
+
+.ceremonyInfo p, .ceremonyInfo ul {
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.ceremonyInfo ul li {
+    margin-bottom: 10px;
+}
+
+.ceremonyInfo a {
+    color: #c54b50;
+    text-decoration: underline;
+}
+
+.ceremonyInfo a:hover {
+    color: #d8737f;
+}
+
+.mapaContainer {
+    background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    width: 48%;
+}
+
+.mapaContainer iframe {
+    border-radius: 10px;
+    width: 100%;
+}
+
+.mapaWrapper {
+    height: 100%;
+    position: relative;
+    width: 100%;
+}
+
+.mapaWrapper iframe {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+/* Responsividade dos Dados do Casamento */
+@media (max-width: 768px) {
+    .casamentoWrapper{
+        max-width: 100%;
+        width: 100%;
+    }
+    
+    .ceremonyInfo, .mapaContainer {
+        margin-bottom: 20px;
+        padding: 20px;
+        width: 100%;
+    }
+
+    .sectionTitle {
+        font-size: 28px;
+    }
+}
+
+/* Sobre os Noivos */
+#noivos {
+    background-color: #c54b50;
+    padding: 60px 20px;
+    scroll-margin-top: 80px;
+    text-align: center;
+}
+
+.sectionTitleClear {
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 36px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+.noivosContainer {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    justify-content: center;
+}
+
+.noivosConteudoContainer {
+    align-items: stretch;
+    display: flex;
+    justify-content: center;
+}
+
+.imageCarousel {
+    border-radius: 20px;
+    width: 70%;
+}
+
+.testimonial-card {
+    background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #555555;
+    font-family: 'Poppins', sans-serif;
+    padding: 30px;
+    text-align: left;
+    width: 30%;
+}
+
+.testimonial-card p {
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.testimonial-card .author {
+    color: #c54b50;
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 20px;
+    text-align: right;
+}
+
+.card-content {
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    justify-content: center;
+}
+
+/* Responsividade dos Noivos */
+@media (max-width: 1024px) {
+    .noivosContainer {
+        flex-direction: column;
+    }
+
+    .noivosConteudoContainer {
+        flex-direction: column;
+    }
+
+    .sectionTitleClear {
+        font-size: 28px;
+    }
+
+    .testimonial-card {
+        margin-top: 20px;
+        width: 100%;
+    }
+}
+
+/* RSPV */
+#rspv {
+    align-items: center;
+    background-color: #c54b50;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    padding: 50px 20px;
+    position: relative;
+    text-align: center;
+}
+
+#rspv::before {
+    background-image: url('/assets/img/noivos_ilustracao.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    bottom: 0;
+    content: "";
+    height: 60%;
+    opacity: 0.1;
+    position: absolute;
+    right: 0;
+    transform: translateX(20%) translateY(20%);
+    width: 60%;
+    z-index: 1;
+}
+
+.rspvContainer {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    padding: 30px;
+    position: relative;
+    width: 600px;
+    z-index: 2;
+}
+
+.rsvp-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.rsvp-form label {
+    color: #555;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+.rsvp-form input, .rsvp-form select, .rsvp-form textarea {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    color: #333;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    margin-bottom: 20px;
+    padding: 12px 15px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.rsvp-form input:hover, .rsvp-form select:hover, .rsvp-form textarea:hover {
+    border-color: #c54b50;
+}
+
+.rsvp-form input:focus, .rsvp-form select:focus, .rsvp-form textarea:focus {
+    border-color: #c54b50;
+    box-shadow: 0 0 5px rgba(197, 75, 80, 0.5);
+    outline: none;
+}
+
+textarea {
+    resize: none;
+}
+
+.confirmacaoContainer {
+    align-items: center;
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.confirmacaoWrapper {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.rsvp-form button {
+    background-color: #c54b50;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    padding: 15px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.rsvp-form button:hover {
+    background-color: #e88386;
+    transform: translateY(-3px);
+}
+
+.rsvp-form button:active {
+    background-color: #a33a3f;
+    transform: translateY(0);
+}
+
+/* Responsividade do RSPV */
+@media (max-width: 768px) {
+    .rspvContainer {
+        max-width: 100%;
+        padding: 15px;
+        width: 100%;
+    }
+    
+    .confirmacaoContainer {
+        align-items: start;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .rsvp-form {
+        text-align: left;
+    }
+}
+
+@media (max-width: 768px) {
+    .ceremonyInfo, .mapaContainer, .rspvContainer, .noivosConteudoContainer, .countdown, .noivosContainer {
+        width: 100%;
+        max-width: 100%;
+    }
+}
