--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -96,6 +96,7 @@ header {
 .menuWrapper ul li a {
     border-radius: 5px;
     color: #555555;
+    display: flex;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     padding: 10px 15px;
@@ -395,7 +396,6 @@ header {
 .card-content {
     display: flex;
     flex-direction: column;
-    height: 80%;
     justify-content: center;
 }
 
