--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -432,7 +432,7 @@ header {
 }
 
 #rspv::before {
-    background-image: url('/assets/img/noivos_ilustracao.png');
+    background-image: url('./assets/img/noivos_ilustracao.png');
     background-repeat: no-repeat;
     background-size: cover;
     bottom: 0;
