correção dos caminhos relativos das imagens

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -21,7 +21,7 @@ body {
 }
 
 body::before {
-    background-image: url('/assets/img/noivos_ilustracao.png');
+    background-image: url('./assets/img/noivos_ilustracao.png');
     background-position: calc(100% + 50%) calc(100% + 50%);
     background-repeat: no-repeat;
     background-size: 90%;
