--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -215,7 +215,25 @@ header {
 }
 
 /* Responsividade da Página Inicial */
+@media (max-width: 767px) {
+    .countdown-clock {
+        flex-direction: column;
+    }
+
+    .noivosTitle {
+        font-size: 24px;
+    }
+
+    header {
+        display: none;
+    }
+}
 @media (max-width: 768px) {
+    .countdownContainer {
+        min-height: 100vh;
+        width: 100vw;
+    }
+
     .countdown-container {
         flex-direction: column;
     }
@@ -302,18 +320,19 @@ header {
 }
 
 .mapaWrapper {
-    height: 100%;
     position: relative;
     width: 100%;
+    height: auto; /* Altera a altura para auto */
 }
 
+
 .mapaWrapper iframe {
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
     width: 100%;
+    height: 450px;
+    left: 0;
+    top: 0;
 }
+
 
 /* Responsividade dos Dados do Casamento */
 @media (max-width: 768px) {
@@ -330,6 +349,10 @@ header {
 
     .sectionTitle {
         font-size: 28px;
+    }
+
+    .mapaWrapper iframe {
+        height: 300px;
     }
 }
 
@@ -411,6 +434,10 @@ header {
 
     .sectionTitleClear {
         font-size: 28px;
+    }
+
+    .imageCarousel {
+        width: 100%;
     }
 
     .testimonial-card {
