--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -20,7 +20,7 @@ body {
 }
 
 body::before {
-    background-image: url('./assets/img/noivos_ilustracao.png');
+    background-image: url('../img/noivos_ilustracao.png');
     background-position: calc(100% + 50%) calc(100% + 50%);
     background-repeat: no-repeat;
     background-size: 90%;
@@ -262,6 +262,17 @@ header {
     }
 
     #home {
+        height: 120vh;
+    }
+
+    .noivosTitle {
+        font-size: 22px;
+        margin-top: 20px;
+    }
+}
+
+@media (min-width: 767px) and (max-width: 1023px) {
+    #home {
         height: 140vh;
     }
 
@@ -269,7 +280,12 @@ header {
         font-size: 36px;
         margin-top: -120px;
     }
+
+    .noivosTitle {
+        padding: 10px;
+    }
 }
+
 @media (max-width: 768px) {
     .countdownContainer {
         height: 100vh;
@@ -506,7 +522,7 @@ header {
 }
 
 #rspv::before {
-    background-image: url('./assets/img/noivos_ilustracao.png');
+    background-image: url('../img/noivos_ilustracao.png');
     background-repeat: no-repeat;
     background-size: cover;
     bottom: 0;
@@ -515,7 +531,7 @@ header {
     opacity: 0.1;
     position: absolute;
     right: 0;
-    transform: translateX(20%) translateY(20%);
+    transform: translateX(20%) translateY(10%);
     width: 60%;
     z-index: 1;
 }
