--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -810,7 +810,8 @@ textarea {
     transition: color 0.3s ease, background-color 0.3s ease;
 }
 
-.menuWrapper ul li a:hover {
+.menuWrapper ul li a:hover, .menuWrapper ul li a:active,
+.menuWrapper ul li a:focus  {
     background-color: #c54b50;
     color: #ffffff;
 }
