--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -34,12 +34,13 @@ body::before {
 }
 
 #home, #noivos, #casamento, #rspv {
-    width: 100%;
+    background: linear-gradient(180deg, #F9D9DA 0%, #F6CCCD 100%);
     min-height: 100vh;
+    width: 100%;
 }
 
 
-.noivosTitle, .sectionTitle, .sectionTitleClear {
+.noivosTitle, .sectionTitle {
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
 
@@ -425,14 +426,6 @@ header {
     display: flex;
 }
 
-.sectionTitleClear {
-    color: #ffffff;
-    font-family: 'Poppins', sans-serif;
-    font-size: 2.5em;
-    margin: 0 auto;
-    margin-top: 2em;
-}
-
 .noivosContainer {
     align-items: center;
     display: flex;
@@ -491,10 +484,6 @@ header {
 
     .noivosConteudoContainer {
         flex-direction: column;
-    }
-
-    .sectionTitleClear {
-        font-size: 28px;
     }
 
     .imageCarousel {
