--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -14,6 +14,7 @@ body, button, input {
 }
 
 body {
+    background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);
     height: 100vh;
     margin: 0;
     position: relative;
@@ -33,15 +34,26 @@ body::before {
     z-index: -1;
 }
 
-#home, #noivos, #casamento, #rspv {
-    background: linear-gradient(180deg, #F9D9DA 0%, #F6CCCD 100%);
-    min-height: 100vh;
+#tsparticles {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    z-index: 9000;
 }
 
 
+#home, #noivos, #casamento, #rspv {
+    background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);
+    min-height: 100vh;
+    width: 100%;
+    z-index: 1000;
+}
+
 .noivosTitle, .sectionTitle {
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
+    z-index: 9999;
 }
 
 .photo-frame {
@@ -65,9 +77,31 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 9999;
 }
-
+/* CSS para o menu hambúrguer */
+.menuWrapper {
+    display: none; /* Menu escondido por padrão */
+  }
+  
+  .menuWrapper.active {
+    display: block; /* Mostrar menu quando ativo */
+  }
+  
+  .menu-toggle.active .hamburger {
+    background-color: transparent; /* Estilo para o ícone de menu ativo */
+  }
+  
+  .menu-toggle.active .hamburger::before {
+    transform: rotate(45deg);
+    top: 0;
+  }
+  
+  .menu-toggle.active .hamburger::after {
+    transform: rotate(-45deg);
+    top: 0;
+  }
+  
 .menuLogoWrapper {
     align-items: center;
     display: flex;
@@ -105,12 +139,12 @@ header {
 }
 
 .menuWrapper ul li a:hover {
-    background-color: #c54b50;
+    background-color: #B9375E;
     color: #ffffff;
 }
 
 .menuWrapper ul li a:active {
-    background-color: #a33a3f;
+    background-color: #E05780;
 }
 
 /* Responsividade do Header */
@@ -140,11 +174,10 @@ header {
     }
 }
 
-
 /* Página Inicial / Countdown */
 #home {
     align-items: center;
-    background: linear-gradient(180deg, #F9D9DA 0%, #F6CCCD 100%);
+    background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -154,11 +187,12 @@ header {
 }
 
 .noivosTitle {
-    color: #c54b50;
+    color: #B9375E;
     font-family: 'Press Start 2P', sans-serif;
     font-size: 48px;
     margin-bottom: 40px;
     padding-top: 60px;
+    z-index: 9999;
 }
 
 .countdown {
@@ -168,25 +202,22 @@ header {
     margin: 0 auto;
     max-width: 700px;
     padding: 30px;
+    z-index: 99999;
 }
 
 .countdown h1 {
-    color: #c54b50;
+    color: #B9375E;
     font-family: 'Poppins', sans-serif;
     font-size: 28px;
     margin-bottom: 30px;
+    z-index: 9999;
 }
 
 .countdown-container {
     display: flex;
     justify-content: space-around;
+    z-index: 9999;
 }
-
-/*.countdown-clock {
-    display: flex;
-    gap: 20px;
-    justify-content: space-around;
-}*/
 
 .countdown-clock {
     display: flex;
@@ -195,16 +226,18 @@ header {
     gap: 20px;
     margin-left: 20px;
     margin-right: 20px;
+    z-index: 9999;
 }
 
 .time-segment {
     flex: 1 1 calc(25% - 20px);
-    background-color: #c54b50;
+    background-color: #B9375E;
     border-radius: 10px;
     color: #ffffff;
     padding: 15px 20px;
     box-sizing: border-box;
     width: 110px;
+    z-index: 9999;
 }
 
 /* Mobile */
@@ -214,15 +247,6 @@ header {
         margin-bottom: 20px;
     }
 }
-
-
-/*.time-segment {
-    background-color: #c54b50;
-    border-radius: 10px;
-    color: #ffffff;
-    font-family: 'Poppins', sans-serif;
-    padding: 15px 20px;
-}*/
 
 .time-label {
     display: block;
@@ -306,13 +330,13 @@ header {
 
 /* Dados do Casamento */
 #casamento {
-    background: linear-gradient(180deg, #F9D9DA 0%, #F6CCCD 100%);
+    background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);
     padding: 60px 20px;
     text-align: center;
 }
 
 .sectionTitle {
-    color: #c54b50;
+    color: #B9375E;
     font-family: 'Poppins', sans-serif;
     font-size: 2.5em;
     margin-bottom: 40px;
@@ -341,7 +365,7 @@ header {
 }
 
 .ceremonyInfo h2, .ceremonyInfo h3 {
-    color: #c54b50;
+    color: #B9375E;
     margin-bottom: 20px;
 }
 
@@ -355,12 +379,12 @@ header {
 }
 
 .ceremonyInfo a {
-    color: #c54b50;
+    color: #B9375E;
     text-decoration: underline;
 }
 
 .ceremonyInfo a:hover {
-    color: #d8737f;
+    color: #E05780;
 }
 
 .mapaContainer {
@@ -379,9 +403,8 @@ header {
 .mapaWrapper {
     position: relative;
     width: 100%;
-    height: auto; /* Altera a altura para auto */
+    height: auto;
 }
-
 
 .mapaWrapper iframe {
     width: 100%;
@@ -389,7 +412,6 @@ header {
     left: 0;
     top: 0;
 }
-
 
 /* Responsividade dos Dados do Casamento */
 @media (max-width: 768px) {
@@ -419,7 +441,7 @@ header {
 
 /* Sobre os Noivos */
 #noivos {
-    background-color: #c54b50;
+    background-color: #B9375E;
     padding: 60px 20px;
     scroll-margin-top: 80px;
     text-align: center;
@@ -462,7 +484,7 @@ header {
 }
 
 .testimonial-card .author {
-    color: #c54b50;
+    color: #B9375E;
     display: block;
     font-size: 14px;
     font-weight: bold;
@@ -499,7 +521,7 @@ header {
 /* RSPV */
 #rspv {
     align-items: center;
-    background-color: #c54b50;
+    background-color: #B9375E;
     display: flex;
     justify-content: center;
     overflow: hidden;
@@ -524,7 +546,7 @@ header {
 }
 
 .rspvContainer {
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 0 auto;
@@ -540,7 +562,7 @@ header {
 }
 
 .rsvp-form label {
-    color: #555;
+    color: #555555;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     margin-bottom: 8px;
@@ -549,7 +571,7 @@ header {
 .rsvp-form input, .rsvp-form select, .rsvp-form textarea {
     border: 1px solid #ddd;
     border-radius: 5px;
-    color: #333;
+    color: #333333;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     margin-bottom: 20px;
@@ -558,12 +580,12 @@ header {
 }
 
 .rsvp-form input:hover, .rsvp-form select:hover, .rsvp-form textarea:hover {
-    border-color: #c54b50;
+    border-color: #B9375E;
 }
 
 .rsvp-form input:focus, .rsvp-form select:focus, .rsvp-form textarea:focus {
-    border-color: #c54b50;
-    box-shadow: 0 0 5px rgba(197, 75, 80, 0.5);
+    border-color: #B9375E;
+    box-shadow: 0 0 5px rgba(185, 55, 94, 0.5);
     outline: none;
 }
 
@@ -585,10 +607,10 @@ textarea {
 }
 
 .rsvp-form button {
-    background-color: #c54b50;
+    background-color: #B9375E;
     border: none;
     border-radius: 5px;
-    color: white;
+    color: #ffffff;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
@@ -597,12 +619,12 @@ textarea {
 }
 
 .rsvp-form button:hover {
-    background-color: #e88386;
+    background-color: #FF7AA2;
     transform: translateY(-3px);
 }
 
 .rsvp-form button:active {
-    background-color: #a33a3f;
+    background-color: #E05780;
     transform: translateY(0);
 }
 
@@ -640,28 +662,28 @@ textarea {
 
 /* Para navegadores baseados em WebKit (Chrome, Safari) */
 ::-webkit-scrollbar {
-    width: 12px; /* Largura da barra de rolagem */
+    width: 12px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #f6cccd; /* Cor de fundo da trilha da barra */
+    background: #FFE0E9;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #c54b50; /* Cor do "polegar" da barra */
+    background-color: #B9375E;
     border-radius: 10px;
-    border: 2px solid #f6cccd; /* Borda para criar um efeito de espaço */
+    border: 2px solid #FFE0E9;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #a33a3f; /* Cor ao passar o mouse */
+    background-color: #E05780;
 }
 
 /* Para navegadores Firefox */
 * {
-    scrollbar-width: thin; /* Largura fina da barra */
-    scrollbar-color: #c54b50 #f6cccd; /* Cor do polegar e da trilha */
+    scrollbar-width: thin;
+    scrollbar-color: #B9375E #FFE0E9;
 }
 
 /* Estilos básicos para o botão do menu */
@@ -678,7 +700,7 @@ textarea {
     position: relative;
     width: 25px;
     height: 2px;
-    background-color: #555;
+    background-color: #555555;
 }
 
 .menu-toggle .hamburger::before,
@@ -687,7 +709,7 @@ textarea {
     position: absolute;
     width: 25px;
     height: 2px;
-    background-color: #555;
+    background-color: #555555;
     transition: all 0.3s ease-in-out;
 }
 
@@ -716,11 +738,10 @@ textarea {
 
 /* Menu padrão (desktop) */
 .menuWrapper {
-    display: flex; /* Exibe o menu no desktop */
+    display: flex;
     align-items: center;
 }
 
-/* Estilos específicos para dispositivos móveis */
 @media (max-width: 768px) {
     .menuLogoWrapper {
         flex-direction: row;
@@ -728,17 +749,15 @@ textarea {
         justify-content: space-between;
     }
 
-    /* Exibe o botão do menu no mobile */
     .menu-toggle {
         display: block;
     }
 
-    /* Oculta o menu no mobile por padrão */
     .menuWrapper {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 70px; /* Ajuste conforme necessário */
+        top: 70px;
         right: 20px;
         background-color: #ffffff;
         border-radius: 5px;
@@ -749,7 +768,7 @@ textarea {
     }
 
     .menuWrapper.active {
-        display: flex; /* Exibe o menu quando ativo */
+        display: flex;
     }
 
     .menuWrapper ul {
@@ -769,20 +788,20 @@ textarea {
     }
 
     .menuWrapper ul li a:hover {
-        background-color: #f6cccd;
+        background-color: #FFE0E9;
     }
 
     /* Estilo do ícone de hambúrguer no mobile */
     .menu-toggle .hamburger,
     .menu-toggle .hamburger::before,
     .menu-toggle .hamburger::after {
-        background-color: #c54b50; /* Cor do ícone de hambúrguer */
+        background-color: #B9375E;
     }
 }
 
 /* Ajustes adicionais para o menu no desktop */
 .menu-toggle {
-    display: none; /* Oculta o botão do menu no desktop */
+    display: none;
 }
 
 .menuWrapper ul {
@@ -803,9 +822,10 @@ textarea {
 
 .menuWrapper ul li a:hover, .menuWrapper ul li a:active,
 .menuWrapper ul li a:focus  {
-    background-color: #c54b50;
+    background-color: #B9375E;
     color: #ffffff;
 }
+
 /* Estilos específicos para dispositivos móveis */
 @media (max-width: 1023px) {
     .menuLogoWrapper {
@@ -814,17 +834,15 @@ textarea {
         justify-content: space-between;
     }
 
-    /* Exibe o botão do menu no mobile */
     .menu-toggle {
         display: block;
     }
 
-    /* Oculta o menu no mobile por padrão */
     .menuWrapper {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 70px; /* Ajuste conforme necessário */
+        top: 70px;
         right: 20px;
         background-color: #ffffff;
         border-radius: 5px;
@@ -835,7 +853,7 @@ textarea {
     }
 
     .menuWrapper.active {
-        display: flex; /* Exibe o menu quando ativo */
+        display: flex;
     }
 
     .menuWrapper ul {
@@ -855,13 +873,12 @@ textarea {
     }
 
     .menuWrapper ul li a:hover {
-        background-color: #f6cccd;
+        background-color: #FFE0E9;
     }
 
-    /* Estilo do ícone de hambúrguer no mobile */
     .menu-toggle .hamburger,
     .menu-toggle .hamburger::before,
     .menu-toggle .hamburger::after {
-        background-color: #c54b50; /* Cor do ícone de hambúrguer */
+        background-color: #B9375E;
     }
 }
