--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -34,6 +34,17 @@ body::before {
     z-index: -1;
 }
 
+#background-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);
+    overflow: hidden;
+}
+
 #tsparticles {
     position: fixed;
     top: 0;
@@ -45,7 +56,7 @@ body::before {
 
 
 #home, #noivos, #casamento, #rspv {
-    background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);
+    /*background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);*/
     min-height: 100vh;
     width: 100%;
     z-index: 1000;
@@ -77,7 +88,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 9999;
+    z-index: 99999;
 }
 /* CSS para o menu hambúrguer */
 .menuWrapper {
@@ -177,7 +188,7 @@ header {
 /* Página Inicial / Countdown */
 #home {
     align-items: center;
-    background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);
+    /*background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);*/
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -330,7 +341,7 @@ header {
 
 /* Dados do Casamento */
 #casamento {
-    background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);
+    /*background: linear-gradient(180deg, #FFC2D4 0%, #FFE0E9 100%);*/
     padding: 60px 20px;
     text-align: center;
 }
@@ -441,7 +452,7 @@ header {
 
 /* Sobre os Noivos */
 #noivos {
-    background-color: #B9375E;
+    /*background-color: #B9375E;*/
     padding: 60px 20px;
     scroll-margin-top: 80px;
     text-align: center;
@@ -521,7 +532,7 @@ header {
 /* RSPV */
 #rspv {
     align-items: center;
-    background-color: #B9375E;
+    /*background-color: #B9375E;*/
     display: flex;
     justify-content: center;
     overflow: hidden;
