--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -6,6 +6,8 @@
 
 html {
     overflow-x: hidden;
+    -webkit-overflow-scrolling: touch; /* Suaviza o comportamento de scroll no Safari */
+    overflow-y: auto;
 }
 
 body, button, input {
