--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -36,6 +36,10 @@ body::before {
     z-index: -1;
 }
 
+section {
+    height: 100% !important;
+}
+
 #background-container {
     position: fixed;
     top: 0;
@@ -450,6 +454,10 @@ header {
     .mapaWrapper iframe {
         height: 300px;
     }
+
+    .ceremonyInfo {
+        font-size: 12px;
+    }
 }
 
 /* Sobre os Noivos */
@@ -509,10 +517,10 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: 18px;
 }
 
-/* Responsividade dos Noivos */
-@media (max-width: 1024px) {
+@media (min-width: 300px) and (max-width: 600px) {
     .noivosContainer {
         flex-direction: column;
     }
@@ -528,6 +536,33 @@ header {
     .testimonial-card {
         margin-top: 20px;
         width: 100%;
+    }
+
+    .card-content {
+        font-size: 12px;
+    }
+}
+/* Responsividade dos Noivos */
+@media (min-width: 601px) and (max-width: 1024px) {
+    .noivosContainer {
+        flex-direction: column;
+    }
+
+    .noivosConteudoContainer {
+        flex-direction: column;
+    }
+
+    .imageCarousel {
+        width: 70%;
+    }
+
+    .testimonial-card {
+        margin-top: 20px;
+        width: 100%;
+    }
+
+    .card-content {
+        font-size: 12px;
     }
 }
 
