--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -478,7 +478,7 @@ header {
 }
 
 .noivosConteudoContainer {
-    align-items: stretch;
+    align-items: center;
     display: flex;
     justify-content: center;
 }
@@ -486,6 +486,14 @@ header {
 .imageCarousel {
     border-radius: 20px;
     width: 70%;
+}
+
+.testimonialCardContainer {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 55%;
 }
 
 .testimonial-card {
@@ -496,7 +504,6 @@ header {
     font-family: 'Poppins', sans-serif;
     padding: 30px;
     text-align: left;
-    width: 30%;
 }
 
 .testimonial-card p {
@@ -517,7 +524,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 @media (min-width: 300px) and (max-width: 600px) {
@@ -530,6 +537,10 @@ header {
     }
 
     .imageCarousel {
+        width: 100%;
+    }
+
+    .testimonialCardContainer {
         width: 100%;
     }
 
@@ -554,6 +565,10 @@ header {
 
     .imageCarousel {
         width: 70%;
+    }
+
+    .testimonialCardContainer {
+        width: 80%;
     }
 
     .testimonial-card {
